--- a/site-teste/site-teste/style.css
+++ b/site-teste/site-teste/style.css
@@ -1,4 +1,4 @@
-
+@charset "UTF-8";
         body { background-color: black;
                 font-family: Arial, Helvetica, sans-serif;
                  font-size: 21px;}
